Add spt_ExposureTimeCalculator as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ets_fiber_assigner"]
 	path = ets_fiber_assigner
 	url = https://github.com/Subaru-PFS/ets_fiber_assigner.git
+[submodule "spt_ExposureTimeCalculator"]
+	path = spt_ExposureTimeCalculator
+	url = https://github.com/Subaru-PFS/spt_ExposureTimeCalculator.git
